[package]
name = "aoc2020"
version = "0.1.0"
authors = ["sherlockmatt <matthew.w.dawson@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
opt-level = 3

[dependencies]
structopt = "0.3"
failure = "0.1"
exitfailure = "0.5"
reqwest = "0.9"
itertools = "0.8"
num = "0.2"
arr_macro = "0.1"
regex = "1.4"
lazy_static = "1.4"
